--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "license": "MIT",
   "scripts": {
     "start": ":"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.10",
+    "prisma": "^4.11.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
