--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "author": "mryhryki",
   "license": "MIT",
   "scripts": {
-    "start": ":"
+    "start": ":",
+    "migration": "npx prisma migrate dev --name init"
   },
   "devDependencies": {
     "@types/node": "^18.15.10",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.11.0"
   }
 }
