4. Explore how to send queries to your database with Prisma Client
https://www.prisma.io/docs/getting-started/quickstart#4-explore-how-to-send-queries-to-your-database-with-prisma-client

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "mryhryki",
   "license": "MIT",
   "scripts": {
-    "start": ":",
+    "start": "ts-node ./script.ts",
     "migration": "npx prisma migrate dev --name init"
   },
   "devDependencies": {
