--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "author": "mryhryki",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node ./script.ts",
+    "start": "esbuild --target=node18 --format=cjs ./script.ts | node",
     "migration": "npx prisma migrate dev --name init"
   },
   "devDependencies": {
     "@types/node": "^18.15.10",
+    "esbuild": "^0.17.14",
     "prisma": "^4.11.0",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
