--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "license": "MIT",
   "scripts": {
     "start": "esbuild --target=node18 --format=cjs ./script.ts | node",
-    "migration": "npx prisma migrate dev --name init",
-    "viewer": "npx prisma studio"
+    "migration": "prisma migrate dev --name init",
+    "viewer": "prisma studio",
+    "erd": "prisma generate"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.0.2",
     "@prisma/client": "^4.11.0",
     "@types/node": "^18.15.10",
     "esbuild": "^0.17.14",
     "prisma": "^4.11.0",
+    "prisma-erd-generator": "^1.4.2",
     "typescript": "^5.0.2"
   }
 }
